fixed episode bleeding at bottom of page

--- a/frontend/src/components/info-page/info-page.css
+++ b/frontend/src/components/info-page/info-page.css
@@ -89,7 +89,7 @@
 
 .ep-preview {
     width: 150px;
-    max-height: 100px;
+    /* max-height: 100px; */
     position: relative;
 }
 
